# Task_IZ2

./: .travis.yml  CMakeLists.txt  README.md
dynamic_library/: libd_func.c  libd_hdr.h
include/: func.h  lib_def.h
src/: dynamic_main.c  func.c  static_main.c
static_library/: lib_func.c  lib_hdr.h
test/: CMakeLists.txt  testing.cpp
test/files/: big_file.txt
